Update icon & color sidebar

--- a/deskover-dashboard-website/src/app/modules/main/main.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/main.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<app-menu-sidebar class="sidebar-light-danger"></app-menu-sidebar>
+<app-menu-sidebar class="sidebar-light-primary"></app-menu-sidebar>
 
 <div class="content-wrapper">
     <router-outlet></router-outlet>
