--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,12 +1,12 @@
 <!-- Brand Logo -->
 <a [routerLink]="['/']" class="brand-link">
     <img
-        src="assets/img/logo.png"
-        alt="CellphoneS Logo"
+        src="assets/img/logo/logo-icon.jpg"
+        alt="Deskover"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
-    <span class="brand-text font-weight-bolder text-danger text-uppercase">Deskover</span>
+    <span class="brand-text font-weight-bolder text-primary text-uppercase">Deskover</span>
 </a>
 
 <!-- Sidebar -->
