--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0 text-uppercase text-danger">
+                <h1 class="m-0 text-uppercase">
                     Thương hiệu sản phẩm
                 </h1>
             </div>
