generate login page and config login service

--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -15,7 +15,7 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <img
-                [src]="user.picture || 'assets/img/default-profile.png'"
+                [src]="avatarURL || 'assets/img/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
             />
@@ -23,7 +23,7 @@
         <div class="info">
             <!-- [routerLink]="['/profile']" -->
             <a class="d-block">
-                {{ user.email }}
+                {{ user.username }}
             </a>
         </div>
     </div>
