--- a/deskover-dashboard-website/src/app/modules/login/login.component.html
+++ b/deskover-dashboard-website/src/app/modules/login/login.component.html
@@ -23,14 +23,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-7">
+                <!--<div class="col-7">
                     <div class="icheck-danger">
                         <input type="checkbox" id="remember" />
                         <label for="remember"> Nhớ tài khoản </label>
                     </div>
-                </div>
+                </div>-->
                 <!-- /.col -->
-                <div class="col-5">
+                <div class="col-12">
                     <app-button [type]="'submit'" [color]="'danger'" [block]="true" [loading]="isAuthLoading"
                         [disabled]="isFacebookLoading || isGoogleLoading">
                         Đăng nhập
@@ -39,17 +39,6 @@
                 <!-- /.col -->
             </div>
         </form>
-
-        <!-- <div class="social-auth-links text-center mb-3">
-            <app-button class="mb-2" [block]="true" [loading]="isFacebookLoading"
-                [disabled]="isAuthLoading || isGoogleLoading" [icon]="'facebook'" (click)="loginByFacebook()">
-                Sign in using Facebook
-            </app-button>
-            <app-button [block]="true" [loading]="isGoogleLoading" [disabled]="isAuthLoading || isFacebookLoading"
-                [icon]="'google'" [color]="'danger'" (click)="loginByGoogle()">
-                Sign in using Google+
-            </app-button>
-        </div> -->
 
         <div class="d-flex justify-content-between mt-3">
             <p class="mb-1">
