Update Login UI

--- a/deskover-dashboard-website/src/app/modules/login/login.component.html
+++ b/deskover-dashboard-website/src/app/modules/login/login.component.html
@@ -31,8 +31,7 @@
                 </div>-->
                 <!-- /.col -->
                 <div class="col-12">
-                    <app-button [type]="'submit'" [color]="'danger'" [block]="true" [loading]="isAuthLoading"
-                        [disabled]="isFacebookLoading || isGoogleLoading">
+                    <app-button [type]="'submit'" [color]="'danger'" [block]="true" [loading]="isAuthLoading">
                         Đăng nhập
                     </app-button>
                 </div>
