--- a/deskover-dashboard-website/src/app/modules/main/header/messages/messages.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/messages/messages.component.html
@@ -7,7 +7,7 @@
         <a href="#" class="dropdown-item">
             <div class="media">
                 <img
-                    src="assets/img/default-profile.png"
+                    src="../../../../../assets/img/avatar/default-profile.png"
                     alt="User Avatar"
                     class="img-size-50 mr-3 img-circle"
                 />
@@ -31,7 +31,7 @@
             <!-- Message Start -->
             <div class="media">
                 <img
-                    src="assets/img/default-profile.png"
+                    src="../../../../../assets/img/avatar/default-profile.png"
                     alt="User Avatar"
                     class="img-size-50 img-circle mr-3"
                 />
@@ -54,7 +54,7 @@
         <a href="#" class="dropdown-item">
             <div class="media">
                 <img
-                    src="assets/img/default-profile.png"
+                    src="../../../../../assets/img/avatar/default-profile.png"
                     alt="User Avatar"
                     class="img-size-50 img-circle mr-3"
                 />
