--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -15,7 +15,7 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <img
-                [src]="avatarURL || 'assets/img/default-profile.png'"
+                [src]="'assets/img/avatar/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
             />
