--- a/deskover-dashboard-website/src/app/pages/profile/profile.component.html
+++ b/deskover-dashboard-website/src/app/pages/profile/profile.component.html
@@ -26,7 +26,7 @@
                         <div class="text-center">
                             <img
                                 class="profile-user-img img-fluid img-circle"
-                                src="assets/img/default-profile.png"
+                                src="../../../assets/img/avatar/default-profile.png"
                                 alt="User profile picture"
                             />
                         </div>
@@ -153,7 +153,7 @@
                                     <div class="user-block">
                                         <img
                                             class="img-circle img-bordered-sm"
-                                            src="assets/img/default-profile.png"
+                                            src="../../../assets/img/avatar/default-profile.png"
                                             alt="user image"
                                         />
                                         <span class="username">
@@ -219,7 +219,7 @@
                                     <div class="user-block">
                                         <img
                                             class="img-circle img-bordered-sm"
-                                            src="assets/img/default-profile.png"
+                                            src="../../../assets/img/avatar/default-profile.png"
                                             alt="User Image"
                                         />
                                         <span class="username">
@@ -267,7 +267,7 @@
                                     <div class="user-block">
                                         <img
                                             class="img-circle img-bordered-sm"
-                                            src="assets/img/default-profile.png"
+                                            src="../../../assets/img/avatar/default-profile.png"
                                             alt="User Image"
                                         />
                                         <span class="username">
@@ -287,7 +287,7 @@
                                         <div class="col-sm-6">
                                             <img
                                                 class="img-fluid"
-                                                src="assets/img/default-profile.png"
+                                                src="../../../assets/img/avatar/default-profile.png"
                                                 alt="Photo"
                                             />
                                         </div>
@@ -297,12 +297,12 @@
                                                 <div class="col-sm-6">
                                                     <img
                                                         class="img-fluid mb-3"
-                                                        src="assets/img/default-profile.png"
+                                                        src="../../../assets/img/avatar/default-profile.png"
                                                         alt="Photo"
                                                     />
                                                     <img
                                                         class="img-fluid"
-                                                        src="assets/img/default-profile.png"
+                                                        src="../../../assets/img/avatar/default-profile.png"
                                                         alt="Photo"
                                                     />
                                                 </div>
@@ -310,12 +310,12 @@
                                                 <div class="col-sm-6">
                                                     <img
                                                         class="img-fluid mb-3"
-                                                        src="assets/img/default-profile.png"
+                                                        src="../../../assets/img/avatar/default-profile.png"
                                                         alt="Photo"
                                                     />
                                                     <img
                                                         class="img-fluid"
-                                                        src="assets/img/default-profile.png"
+                                                        src="../../../assets/img/avatar/default-profile.png"
                                                         alt="Photo"
                                                     />
                                                 </div>
@@ -492,19 +492,19 @@
 
                                             <div class="timeline-body">
                                                 <img
-                                                    src="assets/img/default-profile.png"
+                                                    src="../../../assets/img/avatar/default-profile.png"
                                                     alt="..."
                                                 />
                                                 <img
-                                                    src="assets/img/default-profile.png"
+                                                    src="../../../assets/img/avatar/default-profile.png"
                                                     alt="..."
                                                 />
                                                 <img
-                                                    src="assets/img/default-profile.png"
+                                                    src="../../../assets/img/avatar/default-profile.png"
                                                     alt="..."
                                                 />
                                                 <img
-                                                    src="assets/img/default-profile.png"
+                                                    src="../../../assets/img/avatar/default-profile.png"
                                                     alt="..."
                                                 />
                                             </div>
