Update admin profile

--- a/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
@@ -16,10 +16,10 @@
 
       <p>
         <span>{{ user.username }}</span>
-        <!--<small>
+        <small>
           <span>Ngày đăng ký: &nbsp;</span>
-          <span>{{ formatDate(user.user.createdDate) }}</span>
-        </small>-->
+          <span>{{ formatDate(user.createdAt) }}</span>
+        </small>
       </p>
     </li>
     <!-- Menu Body -->
