--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -23,7 +23,7 @@
         <div class="info">
             <!-- [routerLink]="['/profile']" -->
             <a class="d-block">
-                {{ user.username }}
+                Xin chào, {{ user.username }}
             </a>
         </div>
     </div>
