--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -42,19 +42,14 @@
           <table class="table table-hover table-sm">
             <thead class="thead-light">
             <tr>
-              <th class="align-middle">#</th>
-              <th class="align-middle">Tên</th>
-              <th class="align-middle">Slug</th>
-              <th class="align-middle">Mô tả</th>
-              <th class="align-middle text-center">Ngày tạo</th>
-              <th class="align-middle text-center">Ngày cập nhật</th>
-              <th class="align-middle text-center">Trạng thái</th>
-              <th
-                class="align-middle text-center"
-                style="width: 125px"
-              >
-                Tác vụ
-              </th>
+              <th scope="col" class="align-middle">#</th>
+              <th scope="col" class="align-middle">Tên</th>
+              <th scope="col" class="align-middle">Slug</th>
+              <th scope="col" class="align-middle">Mô tả</th>
+              <th scope="col" class="align-middle text-center">Ngày tạo</th>
+              <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
+              <th scope="col" class="align-middle text-center">Trạng thái</th>
+              <th scope="col" class="align-middle text-center" style="width: 125px">Tác vụ</th>
             </tr>
             </thead>
             <tbody>
@@ -94,12 +89,7 @@
               <td class="align-middle text-center">
                 <button
                   type="button"
-                  class="
-                                            btn btn-icon
-                                            bg-faded-info
-                                            mr-md-2
-                                            mb-md-0 mb-2
-                                        "
+                  class="btn btn-icon bg-faded-info mr-md-2 mb-md-0 mb-2"
                   (click)="editCategory(item.id)"
                 >
                   <i
