--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -29,23 +29,20 @@
           <h3 class="card-title">Danh sách danh mục</h3>
           <button
             type="button"
-            class="btn btn-icon bg-faded-accent"
+            class="btn btn-sm btn-primary"
             (click)="newCategory()"
           >
-            <i class="fas fa-plus text-accent"></i>
+            <i class="fas fa-plus"></i>
           </button>
         </div>
       </div>
 
       <div class="card-body p-3">
-        <div class="table-responsive">
-          <table class="table table-hover table-sm">
+          <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm">
             <thead class="thead-light">
             <tr>
-              <th scope="col" class="align-middle">#</th>
               <th scope="col" class="align-middle">Tên</th>
               <th scope="col" class="align-middle">Slug</th>
-              <th scope="col" class="align-middle">Mô tả</th>
               <th scope="col" class="align-middle text-center">Ngày tạo</th>
               <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
               <th scope="col" class="align-middle text-center">Trạng thái</th>
@@ -53,7 +50,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let item of categories; let i = index">
+            <!--<tr *ngFor="let item of categories; let i = index">
               <td class="align-middle">
                 {{ i + 1 }}
               </td>
@@ -104,13 +101,12 @@
                   <i class="fas fa-trash text-danger"></i>
                 </button>
               </td>
-            </tr>
+            </tr>-->
             </tbody>
           </table>
         </div>
       </div>
     </div>
-  </div>
 </section>
 <!-- Modal -->
 <ng-template #categoryModal let-modal>
