--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -2,9 +2,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-uppercase">
-          Danh mục sản phẩm
-        </h1>
+        <h1 class="m-0 text-uppercase">Danh mục sản phẩm</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
@@ -29,84 +27,22 @@
           <h3 class="card-title">Danh sách danh mục</h3>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="btn btn-sm bg-faded-accent"
             (click)="newCategory()"
           >
-            <i class="fas fa-plus"></i>
+            <i class="fas fa-plus text-accent"></i>
           </button>
         </div>
       </div>
 
       <div class="card-body p-3">
-          <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm">
-            <thead class="thead-light">
-            <tr>
-              <th scope="col" class="align-middle">Tên</th>
-              <th scope="col" class="align-middle">Slug</th>
-              <th scope="col" class="align-middle text-center">Ngày tạo</th>
-              <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
-              <th scope="col" class="align-middle text-center">Trạng thái</th>
-              <th scope="col" class="align-middle text-center" style="width: 125px">Tác vụ</th>
-            </tr>
-            </thead>
-            <tbody>
-            <!--<tr *ngFor="let item of categories; let i = index">
-              <td class="align-middle">
-                {{ i + 1 }}
-              </td>
-              <td class="align-middle">
-                {{ item.name }}
-              </td>
-              <td class="align-middle">
-                {{ item.slug }}
-              </td>
-              <td class="align-middle">
-                {{ item.description ? item.description : '-' }}
-              </td>
-              <td class="align-middle text-center">
-                {{ item.createdAt | date: 'dd/MM/yyyy' }}
-              </td>
-              <td class="align-middle text-center">
-                {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
-              </td>
-              <td class="align-middle text-center">
-                <span
-                  *ngIf="item.actived"
-                  class="badge badge-success"
-                >
-                  Hoạt động
-                </span>
-                <span
-                  *ngIf="!item.actived"
-                  class="badge badge-danger"
-                >
-                  Không hoạt động
-                </span>
-              </td>
-              <td class="align-middle text-center">
-                <button
-                  type="button"
-                  class="btn btn-icon bg-faded-info mr-md-2 mb-md-0 mb-2"
-                  (click)="editCategory(item.id)"
-                >
-                  <i
-                    class="fas fa-pen-square text-info"
-                  ></i>
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-icon bg-faded-danger"
-                  (click)="deleteCategory(item.id)"
-                >
-                  <i class="fas fa-trash text-danger"></i>
-                </button>
-              </td>
-            </tr>-->
-            </tbody>
-          </table>
-        </div>
+        <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm">
+          <thead class="thead-light"></thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
+  </div>
 </section>
 <!-- Modal -->
 <ng-template #categoryModal let-modal>
@@ -124,7 +60,6 @@
     </button>
   </div>
   <div class="modal-body">
-    <!-- Sử dụng template-driven forms -->
     <form #categoryForm="ngForm">
       <div class="row">
         <div class="col-6">
@@ -140,13 +75,8 @@
               #name="ngModel"
               required
             />
-            <div
-              class="invalid-feedback"
-              *ngIf="name.invalid && (name.dirty || name.touched)"
-            >
-                            <span *ngIf="name.errors?.['required']"
-                            >Vui lòng nhập slug danh mục</span
-                            >
+            <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
+              <span *ngIf="name.errors?.['required']">Vui lòng nhập slug danh mục</span>
             </div>
           </div>
         </div>
@@ -162,13 +92,8 @@
               #slug="ngModel"
               required
             />
-            <div
-              class="invalid-feedback"
-              *ngIf="slug.invalid && (slug.dirty || slug.touched)"
-            >
-                            <span *ngIf="slug.errors?.['required']"
-                            >Vui lòng nhập tên danh mục</span
-                            >
+            <div  class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
+              <span *ngIf="slug.errors?.['required']">Vui lòng nhập tên danh mục</span>
             </div>
           </div>
         </div>
@@ -176,12 +101,10 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button
-      type="button"
+    <button type="button"
       class="btn btn-outline-danger"
       (click)="saveCategory(category); modal.close('Save click')"
-      [disabled]="categoryForm.invalid"
-    >
+      [disabled]="categoryForm.invalid">
       Lưu
     </button>
   </div>
