config rerender table

--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="card-body p-3">
-        <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm">
           <thead class="thead-light"></thead>
           <tbody></tbody>
         </table>
