Fill data subcategory table

--- a/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
@@ -1,16 +1,20 @@
 <div class="float-right d-none d-sm-block">
     <b>Phiên bản</b> {{ appVersion }}
 </div>
-<strong>
-    <span>Copyright &copy; {{ currentYear }}</span>
-    <a
-        href="http://tienphongcorp.com/"
-        target="_blank"
-        rel="noopener noreferrer"
-        style="margin: 0"
-    >
-        Deskover</a
-    >
-    <span>.</span>
-</strong>
-<span> Đã đăng ký bản quyền.</span>
+<div class="d-block d-lg-none">
+  <strong>
+    <span>Copyright &copy; {{ currentYear }} </span>
+    <a href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
+    <span>. </span>
+  </strong>
+  <span>Đã đăng ký bản quyền.</span>
+</div>
+<div class="d-none d-lg-block">
+  <strong>
+    <span>Nhóm </span>
+    <a href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
+    <span>: Nguyễn Hoài Minh, Phạm Văn Hải, Phạm Quang Vũ, Nguyễn Quang Huy, Bùi Đức Minh.</span>
+  </strong>
+  <span></span>
+</div>
+
