--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -79,7 +79,7 @@
             </tbody>
             <tbody *ngIf="categories?.length === 0">
             <tr>
-              <td colspan="5" class="text-center">Không có dữ liệu!</td>
+              <td colspan="5" class="text-center">Không tìm thấy kết quá</td>
             </tr>
             </tbody>
           </table>
