--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -1,23 +1,159 @@
 <section class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-uppercase">
-                    Thương hiệu sản phẩm
-                </h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item">
-                        <a
-                            [routerLink]="['/']"
-                            routerLinkActive="router-link-active"
-                            >Trang chủ</a
-                        >
-                    </li>
-                    <li class="breadcrumb-item active">Thương hiệu  </li>
-                </ol>
-            </div>
-        </div>
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0 text-uppercase">Danh mục chính</h1>
+      </div>
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item">
+            <a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
+          </li>
+          <li class="breadcrumb-item active">Danh mục chính</li>
+        </ol>
+      </div>
     </div>
+  </div>
 </section>
+<section class="content">
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <label for="filter-brand" class="col-lg-auto col-form-label">Trạng thái</label>
+          <select id="filter-brand" class="custom-select col-6 col-md-2" [(ngModel)]="isActive"
+                  (change)="rerender()">
+            <option [ngValue]="true">Hoạt động</option>
+            <option [ngValue]="false">Chưa kích hoạt</option>
+          </select>
+          <div class="col"></div>
+          <div class="col-auto d-flex align-items-center">
+            <button type="button" class="btn btn-sm bg-faded-accent w-sm-100" (click)="newBrand()" placement="left"
+                    ngbTooltip="Thêm">
+              <i class="fas fa-plus text-accent"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="card-body p-3">
+        <div class="table-responsive">
+          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
+            <thead class="thead-light">
+            <tr>
+              <th scope="col" class="align-middle">Tên</th>
+              <th scope="col" class="align-middle">Slug</th>
+              <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
+              <!--<th scope="col" class="align-middle text-center">Trạng thái</th>-->
+              <th scope="col" class="align-middle text-center">Công cụ</th>
+            </tr>
+            </thead>
+            <tbody *ngIf="brands?.length !== 0">
+            <tr *ngFor="let item of brands; let i = index">
+              <td class="align-middle">
+                {{ item.name }}
+              </td>
+              <td class="align-middle">
+                {{ item.slug }}
+              </td>
+              <td class="align-middle text-center">
+                {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
+              </td>
+              <!--<td class="align-middle text-center">
+                <span *ngIf="item.actived" class="badge badge-success">Kích hoạt</span>
+                <span *ngIf="!item.actived" class="badge badge-danger">Vô hiệu hoá</span>
+              </td>-->
+              <td class="align-middle text-center">
+                <div *ngIf="isActive">
+                  <button type="button" class="btn btn-sm bg-faded-info mr-md-2" placement="top" ngbTooltip="Sửa"
+                          (click)="getBrand(item.id)">
+                    <i class="fas fa-pen-square text-info"></i>
+                  </button>
+                  <button type="button" class="btn btn-sm bg-faded-danger" (click)="deleteBrand(item.id)"
+                          placement="top" ngbTooltip="Xoá" container="body">
+                    <i class="fas fa-trash text-danger"></i>
+                  </button>
+                </div>
+                <div *ngIf="!isActive">
+                  <button type="button" class="btn btn-sm bg-success"
+                          (click)="activeBrand(item.id)">
+                    Kích hoạt
+                  </button>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+            <tbody *ngIf="brands?.length === 0">
+            <tr>
+              <td colspan="5" class="text-center">Không tìm thấy kết quá</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Modal -->
+<ng-template #brandModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title text-danger" id="modal-basic-title">
+      {{ isEdit ? 'Sửa' : 'Thêm' }} danh mục
+    </h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="closeModal()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form #brandForm="ngForm">
+      <div class="row">
+        <div class="col-6">
+          <div class="form-group">
+            <label for="name">Tên</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              name="name"
+              [(ngModel)]="brand.name"
+              (keyup)="brand.slug = toSlug(brand.name)"
+              #name="ngModel"
+              required
+            />
+            <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
+              <span *ngIf="name.errors?.['required']">Vui lòng nhập tên</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="form-group">
+            <label for="slug">Slug</label>
+            <input
+              type="text"
+              class="form-control"
+              id="slug"
+              name="slug"
+              [(ngModel)]="brand.slug"
+              #slug="ngModel"
+              required
+            />
+            <div class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
+              <span *ngIf="slug.errors?.['required']">Vui lòng nhập slug</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button"
+            class="btn btn-outline-danger"
+            (click)="saveBrand(brand);"
+            [disabled]="brandForm.invalid">
+      Lưu
+    </button>
+  </div>
+</ng-template>
