--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-uppercase">Danh mục con</h1>
+        <h1 class="m-0 text-uppercase">Danh mục sản phẩm</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item">
             <a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
           </li>
-          <li class="breadcrumb-item active">Danh mục con</li>
+          <li class="breadcrumb-item active">Danh mục sản phẩm</li>
         </ol>
       </div>
     </div>
