--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -38,55 +38,8 @@
       <div class="card-body p-3">
         <div class="table-responsive">
           <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-            <thead class="thead-light">
-            <tr>
-              <th scope="col" class="align-middle">Tên</th>
-              <th scope="col" class="align-middle">Slug</th>
-              <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
-              <!--<th scope="col" class="align-middle text-center">Trạng thái</th>-->
-              <th scope="col" class="align-middle text-center">Công cụ</th>
-            </tr>
-            </thead>
-            <tbody *ngIf="brands?.length !== 0">
-            <tr *ngFor="let item of brands; let i = index">
-              <td class="align-middle">
-                {{ item.name }}
-              </td>
-              <td class="align-middle">
-                {{ item.slug }}
-              </td>
-              <td class="align-middle text-center">
-                {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
-              </td>
-              <!--<td class="align-middle text-center">
-                <span *ngIf="item.actived" class="badge badge-success">Kích hoạt</span>
-                <span *ngIf="!item.actived" class="badge badge-danger">Vô hiệu hoá</span>
-              </td>-->
-              <td class="align-middle text-center">
-                <div *ngIf="isActive">
-                  <button type="button" class="btn btn-sm bg-faded-info mr-md-2" placement="top" ngbTooltip="Sửa"
-                          (click)="getBrand(item.id)">
-                    <i class="fas fa-pen-square text-info"></i>
-                  </button>
-                  <button type="button" class="btn btn-sm bg-faded-danger" (click)="deleteBrand(item.id)"
-                          placement="top" ngbTooltip="Xoá" container="body">
-                    <i class="fas fa-trash text-danger"></i>
-                  </button>
-                </div>
-                <div *ngIf="!isActive">
-                  <button type="button" class="btn btn-sm bg-success"
-                          (click)="activeBrand(item.id)">
-                    Kích hoạt
-                  </button>
-                </div>
-              </td>
-            </tr>
-            </tbody>
-            <tbody *ngIf="brands?.length === 0">
-            <tr>
-              <td colspan="5" class="text-center">Không tìm thấy kết quá</td>
-            </tr>
-            </tbody>
+            <thead class="thead-light"></thead>
+            <tbody></tbody>
           </table>
         </div>
       </div>
