--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-uppercase">Danh mục chính</h1>
+        <h1 class="m-0 text-uppercase">Thương hiệu</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item">
             <a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
           </li>
-          <li class="breadcrumb-item active">Danh mục chính</li>
+          <li class="breadcrumb-item active">Thương hiệu</li>
         </ol>
       </div>
     </div>
@@ -35,13 +35,11 @@
           </div>
         </div>
       </div>
-      <div class="card-body p-3">
-        <div class="table-responsive">
-          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-            <thead class="thead-light"></thead>
-            <tbody></tbody>
-          </table>
-        </div>
+      <div class="card-body  p-3">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
+          <thead class="thead-light"></thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
   </div>
@@ -50,7 +48,7 @@
 <ng-template #brandModal let-c="close" let-d="dismiss">
   <div class="modal-header">
     <h4 class="modal-title text-danger" id="modal-basic-title">
-      {{ isEdit ? 'Sửa' : 'Thêm' }} danh mục
+      {{ isEdit ? 'Sửa' : 'Thêm' }} thương hiệu
     </h4>
     <button
       type="button"
