--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -35,8 +35,8 @@
           </div>
         </div>
       </div>
-      <div class="card-body p-3">
-        <div class="table-responsive">
+      <div class="card-body p-0">
+        <div class="table-responsive p-3">
           <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
             <thead class="thead-light">
             <tr>
