--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -22,7 +22,7 @@
         <div class="row">
           <label for="filter-subcategory" class="col-auto col-form-label">Trạng thái</label>
           <select id="filter-subcategory" class="custom-select col-6 col-md-2" [(ngModel)]="isActive"
-                  (change)="rerender()">
+                  (change)="filter()">
             <option [ngValue]="true">Hoạt động</option>
             <option [ngValue]="false">Chưa kích hoạt</option>
           </select>
