Migrate Bootstrap v4 to v5

--- a/deskover-dashboard-website/src/app/modules/forgot-password/forgot-password.component.html
+++ b/deskover-dashboard-website/src/app/modules/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
         <a [routerLink]="['/']" class="h1">Cellphone<b>S</b></a>
     </div>
     <div class="card-body">
-        <h5 class="login-box-msg text-uppercase font-weight-bold">
+        <h5 class="login-box-msg text-uppercase fw-bold">
             Quên mật khẩu
         </h5>
         <form [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
@@ -14,10 +14,8 @@
                     class="form-control"
                     placeholder="Email"
                 />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="fas fa-envelope"></span>
-                    </div>
+                <div class="input-group-text">
+                    <span class="fas fa-envelope"></span>
                 </div>
             </div>
             <div class="row">
