--- a/deskover-dashboard-website/src/app/modules/main/header/messages/messages.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/messages/messages.component.html
@@ -1,7 +1,7 @@
 <app-dropdown size="lg">
     <ng-container dropdown-button>
         <i class="far fa-comments"></i>
-        <span class="badge badge-danger navbar-badge">3</span>
+        <span class="badge bg-danger navbar-badge">3</span>
     </ng-container>
     <ng-container dropdown-menu>
         <a href="#" class="dropdown-item">
