--- a/deskover-dashboard-website/src/app/modules/main/header/notifications/notifications.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/notifications/notifications.component.html
@@ -1,7 +1,7 @@
 <app-dropdown size="lg">
     <ng-container dropdown-button>
         <i class="far fa-bell"></i>
-        <span class="badge badge-warning navbar-badge">15</span>
+        <span class="badge bg-warning navbar-badge">15</span>
     </ng-container>
     <ng-container dropdown-menu>
         <span class="dropdown-item dropdown-header">15 Notifications</span>
