--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,12 +1,12 @@
 <!-- Brand Logo -->
-<a [routerLink]="['/']" class="brand-link">
+<a [routerLink]="['/']" class="brand-link text-decoration-none">
     <img
         src="assets/img/logo/logo-icon.png"
         alt="Deskover"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
-    <span class="brand-text font-weight-bolder text-primary text-uppercase">Deskover</span>
+    <span class="brand-text fw-bolder text-primary text-uppercase">Deskover</span>
 </a>
 
 <!-- Sidebar -->
