--- a/deskover-dashboard-website/src/app/modules/login/login.component.html
+++ b/deskover-dashboard-website/src/app/modules/login/login.component.html
@@ -1,43 +1,39 @@
 <div class="card card-outline card-primary">
-    <div class="card-header text-center" style="background-color: fff;">
-        <a [routerLink]="['/']" class="h1">
-          <img width="872" class="img-fluid" src="assets/img/logo/logo.png">
-        </a>
-    </div>
-    <div class="card-body">
-        <h5 class="login-box-msg font-weight-bold text-uppercase">Đăng nhập</h5>
+  <div class="card-header text-center" style="background-color: fff;">
+    <a [routerLink]="['/']" class="h1">
+      <img width="872" class="img-fluid" src="assets/img/logo/logo.png">
+    </a>
+  </div>
+  <div class="card-body">
+    <h5 class="login-box-msg fw-bold text-uppercase">Đăng nhập</h5>
 
-        <form [formGroup]="loginForm" (ngSubmit)="loginByAuth()">
-            <div class="input-group mb-3">
-                <input formControlName="username" type="text" class="form-control" placeholder="Username" />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="icon fas fa-envelope"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="input-group mb-3">
-                <input formControlName="password" type="password" class="form-control" placeholder="Mật khẩu" />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="icon fas fa-lock"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <app-button [type]="'submit'" [color]="'primary'" [block]="true" [loading]="isAuthLoading">
-                        Đăng nhập
-                    </app-button>
-                </div>
-            </div>
-        </form>
+    <form [formGroup]="loginForm" (ngSubmit)="loginByAuth()">
+      <div class="input-group mb-3">
+        <input formControlName="username" type="text" class="form-control" placeholder="Username"/>
+        <div class="input-group-text">
+          <span class="icon fas fa-envelope"></span>
+        </div>
+      </div>
+      <div class="input-group mb-3">
+        <input formControlName="password" type="password" class="form-control" placeholder="Mật khẩu"/>
+        <div class="input-group-text">
+          <span class="icon fas fa-lock"></span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <app-button [type]="'submit'" [color]="'primary'" [block]="true" [loading]="isAuthLoading">
+            Đăng nhập
+          </app-button>
+        </div>
+      </div>
+    </form>
 
-        <!-- <div class="d-flex justify-content-between mt-3">
-            <p class="mb-1">
-                <a [routerLink]="['/forgot-password']" class="text-primary">Quên mật khẩu?</a>
-            </p>
-        </div> -->
-    </div>
-    <!-- /.login-card-body -->
+    <!-- <div class="d-flex justify-content-between mt-3">
+        <p class="mb-1">
+            <a [routerLink]="['/forgot-password']" class="text-primary">Quên mật khẩu?</a>
+        </p>
+    </div> -->
+  </div>
+  <!-- /.login-card-body -->
 </div>
