--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -7,7 +7,7 @@
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item">
-            <a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
+            <a class="text-decoration-none" [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
           </li>
           <li class="breadcrumb-item active">Thương hiệu</li>
         </ol>
@@ -37,7 +37,7 @@
       </div>
       <div class="card-body  p-3">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-          <thead class="thead-light"></thead>
+          <thead class="table-light"></thead>
           <tbody></tbody>
         </table>
       </div>
@@ -54,7 +54,7 @@
       type="button"
       class="close"
       aria-label="Close"
-      (click)="closeModal()">
+      (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-6">
           <div class="form-group">
-            <label for="name">Tên</label>
+            <label class="form-label" for="name">Tên</label>
             <input
               type="text"
               class="form-control"
@@ -81,7 +81,7 @@
         </div>
         <div class="col-6">
           <div class="form-group">
-            <label for="slug">Slug</label>
+            <label class="form-label" for="slug">Slug</label>
             <input
               type="text"
               class="form-control"
@@ -102,7 +102,7 @@
   <div class="modal-footer">
     <button type="button"
             class="btn btn-outline-danger"
-            (click)="saveBrand(brand);"
+            (click)="saveBrand(brand); c('Save click')"
             [disabled]="brandForm.invalid">
       Lưu
     </button>
