--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -38,7 +38,7 @@
 
       <div class="card-body p-3">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-          <thead class="thead-light"></thead>
+          <thead class="table-light"></thead>
           <tbody></tbody>
         </table>
       </div>
@@ -55,14 +55,14 @@
       type="button"
       class="close"
       aria-label="Close"
-      (click)="closeModal()">
+      (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <form #subcategoryForm="ngForm">
       <div class="form-group">
-        <label for="name">Tên</label>
+        <label class="form-label" for="name">Tên</label>
         <input
           type="text"
           class="form-control"
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="slug">Slug</label>
+        <label class="form-label" for="slug">Slug</label>
         <input
           type="text"
           class="form-control"
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="category">Danh mục cha</label>
+        <label class="form-label" for="category">Danh mục cha</label>
         <select id="category" class="custom-select" name="category" [(ngModel)]="subcategoryDto.categoryId"
                 #category="ngModel" required>
           <option *ngFor="let category of categories" [ngValue]="category.id">{{category.name}}</option>
@@ -104,7 +104,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-danger" (click)="saveSubcategory(subcategoryDto);"
+    <button type="button" class="btn btn-outline-danger" (click)="saveSubcategory(subcategoryDto); c('Save click')"
             [disabled]="subcategoryForm.invalid">Lưu
     </button>
   </div>
