--- a/deskover-dashboard-website/src/app/pages/dashboard/dashboard.component.html
+++ b/deskover-dashboard-website/src/app/pages/dashboard/dashboard.component.html
@@ -7,7 +7,9 @@
             <!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a [routerLink]="['/']">Trang chủ</a></li>
+                    <li class="breadcrumb-item">
+                      <a class="text-decoration-none" [routerLink]="['/']">Trang chủ</a>
+                    </li>
                     <li class="breadcrumb-item active">Bảng điều khiển</li>
                 </ol>
             </div>
