--- a/deskover-dashboard-website/src/app/pages/profile/profile.component.html
+++ b/deskover-dashboard-website/src/app/pages/profile/profile.component.html
@@ -252,11 +252,9 @@
                         class="form-control form-control-sm"
                         placeholder="Response"
                       />
-                      <div class="input-group-append">
-                        <button type="submit" class="btn btn-danger">
-                          Send
-                        </button>
-                      </div>
+                      <button type="submit" class="btn btn-danger">
+                        Send
+                      </button>
                     </div>
                   </form> -->
                                 </div>
@@ -521,35 +519,35 @@
                             <div class="tab-pane" id="settings">
                                 <!-- <form class="form-horizontal">
                   <div class="form-group">
-                    <label for="inputName" class="col-sm-2 control-label">Name</label>
+                    <label class="form-label" for="inputName" class="col-sm-2 control-label">Name</label>
 
                     <div class="col-sm-10">
                       <input type="email" class="form-control" id="inputName" placeholder="Name">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                    <label class="form-label" for="inputEmail" class="col-sm-2 control-label">Email</label>
 
                     <div class="col-sm-10">
                       <input type="email" class="form-control" id="inputEmail" placeholder="Email">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="inputName2" class="col-sm-2 control-label">Name</label>
+                    <label class="form-label" for="inputName2" class="col-sm-2 control-label">Name</label>
 
                     <div class="col-sm-10">
                       <input type="text" class="form-control" id="inputName2" placeholder="Name">
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="inputExperience" class="col-sm-2 control-label">Experience</label>
+                    <label class="form-label" for="inputExperience" class="col-sm-2 control-label">Experience</label>
 
                     <div class="col-sm-10">
                       <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="inputSkills" class="col-sm-2 control-label">Skills</label>
+                    <label class="form-label" for="inputSkills" class="col-sm-2 control-label">Skills</label>
 
                     <div class="col-sm-10">
                       <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
@@ -558,7 +556,7 @@
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                       <div class="checkbox">
-                        <label>
+                        <label class="form-label">
                           <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
                         </label>
                       </div>
